--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ requests>=2.31.0
 beautifulsoup4>=4.12.0
 openai>=1.0.0
 python-dotenv>=1.0.0
-selenium>=4.15.0
+selenium>=4.15.0,<4.20.0
 webdriver-manager>=4.0.0
 undetected-chromedriver>=3.5.0
+setuptools>=65.0.0
 
